--- a/css/style.css
+++ b/css/style.css
@@ -1,71 +1,28 @@
 body {
-    padding-top: 50px;
+    padding-top: 0px;
     overflow: hidden;
 }
-#wrapper {
-    min-height: 100%;
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0px;
-    left: 0;
-    display: inline-block;
-}
-#main-wrapper {
-    height: 100%;
-    overflow-y: auto;
-    padding: 50px 0 0px 0;
-}
-#main {
-    position: relative;
-    height: 100%;
-    overflow-y: auto;
-    padding: 0 15px;
-}
-#sidebar-wrapper {
-    height: 100%;
-    padding: 50px 0 0px 0;
-    position: fixed;
-    border-right: 1px solid gray;
-}
-#sidebar {
-    position: relative;
-    height: 100%;
-    overflow:hidden;
-}
-#sidebar .list-group-item {
-        border-radius: 0;
-        border-left: 0;
-        border-right: 0;
-        border-top: 0;
-}
-@media (max-width: 992px) {
-    body {
-        padding-top: 0px;
-    }
-}
-@media (min-width: 992px) {
-    #main-wrapper {
-        float:right;
-    }
-}
-@media (max-width: 992px) {
-    #main-wrapper {
-        padding-top: 0px;
-    }
-}
-@media (max-width: 992px) {
-    #sidebar-wrapper {
-        position: static;
-        height:auto;
-        max-height: 300px;
-      border-right:0;
-  }
-}
-.footer {
-    background-color:#ffffff;
-  bottom:0;
-    position:fixed;
-    padding:10px;
-}
 
+   #header {
+    background-color:black;
+    opacity: 0.75;
+    color:white;
+    font-family: "Century gothic", century, sans-serif;
+    text-align:left;
+    width: 100%;
+    padding: 10px;
+  }
+
+
+
+#LeftNavBar {
+    line-height:30px;
+    opacity: 0.65;
+    color:white; 
+    font-family: "Century gothic", century, sans-serif;
+    background-color:black;
+    height:100%;
+    width:25%;
+    float:left;
+    padding:0%; 
+    }
