--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@ body {
     overflow: hidden;
 }
 
-   #header {
+#header {
     background-color:black;
     opacity: 0.65;
     color:white;
@@ -15,10 +15,10 @@ body {
 
 #LeftNavBar {
     line-height:30px;
-    opacity: 0.45;
+
     color:white; 
     font-family: "Century gothic", century, sans-serif;
-    background-color:black;
+    background-color:black; opacity: 0.45;
     height:100%;
     width:25%;
     float:left;
@@ -40,4 +40,39 @@ body {
     float:left;
     padding:15px; 
     }
+
+
+#DishDetailsScreen{
+    float:right;
+    color:white;
+    width:70%;
+    padding:15px;
+}
+#imagetext{
+    float:left;
+    width:50%;
+}
+
+#ingred {
+    float:left;
+    background-color:black;
+    opacity: 0.75;
+    color:white;
+    font-family: "Century gothic", century, sans-serif;   
+    width:50%;
+    padding:10px;    
+}
+
+ #goback {     
+    line-height:30px;
+    background-color:white; opacity: 0.75;
+    color:black;
+    font-family: "Century gothic", century, sans-serif;
+    width:75%;
+    float:right;
+    padding:15px;    
+}
+    #menuView {
+    color: white;
+}
 
